# ceptron

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: activation.hpp  ffn.hpp  ffn_dyn.hpp  ffn_layer.hpp  global.hpp  ionet.hpp  log.hpp  min_step.hpp  net.hpp  net_dyn.hpp  regression.hpp  slfn.hpp  test_functions.hpp  tmp_utils.hpp  train_dyn.hpp  training.hpp
src/: activation.cpp  ffn_dyn.cpp  hello.cpp  hello.cxx  ionet.cpp  min_step.cpp  minimize.cpp  net_dyn.cpp  regression.cpp  test_functions.cpp  test_min.cpp  test_net.cpp  train_dyn.cpp
test/: test_log.cpp  test_min.cpp  test_net.cpp  test_train.cpp
